--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,10 @@ drive_testing/*
 user/home/testing/sandbox/*
 user/bin/*
 
+*.work.fd
+*.EFI
+*.BIN
+
+bootloader/uefi/build/*
+
 !kernel/trampoline.s
